# CS-2D-BP-Arc

./: .gitignore  CMakeLists.txt  CMakePresets.json  CS-2D-BP_技术文档.md  README.md
data/: test.csv  test.txt  test_simple.csv
docs/: Arc分支架构重构_RMP行约束与对偶价格_20251230.md  Arc分支约束未生效问题修复_20251229_234537.md  Logger系统重构_从崩溃到稳定_20251229_032437.md  分支定价算法调试修复记录_20251229_030257.md  坐标系统与尺寸规范统一_问题分析与解决_20251229_052000.md  多算例测试结果_20251229_051500.md  数学模型与公式完整文档_20251229.md  稳定性测试报告_20251228.md  输出格式迁移_从TXT到JSON_20251229_035800.md  问题分析_CPLEX崩溃修复_20251228_102947.md
models/: 数学模型1.0.md  数学模型1.1.md
src/: 2DBP.h  arc_flow.cpp  branch_and_price.cpp  branching.cpp  column_generation.cpp  heuristic.cpp  input.cpp  logger.cpp  logger.h  main.cpp  new_node.cpp  new_node_column_generation.cpp  new_node_first_master_problem.cpp  new_node_generating.cpp  new_node_sub.cpp  output.cpp  output_models.cpp  output_results.cpp  primal_heuristic.cpp  root_node.cpp  root_node_column_generation.cpp  root_node_first_master_problem.cpp  root_node_sub.cpp  sub_problem.cpp  update_master_problem.cpp
